# Parallel_Image_Processing_Engine

./: .gitignore  CMakeLists.txt  imgui.ini
include/: Benchmark.h  Filters.h  GUI.h  ImageProcessor.h  ThreadPool.h
src/: Benchmark.cpp  Filters.cpp  GUI.cpp  ImageProcessor.cpp  ThreadPool.cpp  main.cpp
